fix(BreadCrumbs): text overflow issue

--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -3,9 +3,7 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
-  line-height: 1;
-  
+  box-sizing: border-box;  
 }
 
 a {
@@ -21,7 +19,6 @@ body {
   font-family: "Open Sans", sans-serif;
   font-size: 14px;
   font-style: normal;
-  line-height: normal;
 }
 
 input::-webkit-outer-spin-button,
